@@ -3,7 +3,7 @@ outputReadable = "Output"
 runtimeReadable = "Runtime"
 propertiesReadable = "Properties"
 methodsReadable = "Methods"
-backtraceAndErrorReadable = "Backtrace and fatal error handling"
+backtraceReadable = "Backtrace"
 
 analyseProtectedReadable = "Analyse protected properties:"
 analysePrivateReadable = "Analyse private properties:"
@@ -57,7 +57,6 @@ configErrorDestination = "Wrong configuration for: 'output => destination'! Expe
 configErrorFolderWritable = "Wrong configuration for: 'output => folder#! Directory is not writable. The configured setting was not applied!"
 configErrorFolderProtection = "Wrong configuration for: 'output => folder'! Directory is not protected. The configured setting was not applied!"
 configErrorSkin = "Wrong configuration for: 'output => skin'! Skin not found. The configured setting was not applied!"
-configErrorRegisterAutomatically2 = "Wrong configuration for: 'backtraceAndError => registerAutomatically'! Fatal errors got removed in PHP 7. The handler will not work here!"
 configErrorDevHandle = "You have entered a wrong developer handle. Please use only letters between a-z and A-Z."
 configErrorLocal = "Could not read the Local Cookie configuration. Sorry :-/"
 configErrorIprange = "Wrong configuration for: 'output => iprange'! An empty IP list means that no one will be able to use kreXX. The configured setting was not applied!"
