@@ -6,6 +6,8 @@
 - Change: Moved the overwrites from the GLOBALS to a static class
 - Change: Prettified the display of sourcecode in the backtrace in
   the smoky grey skin.
+- Change: Removeed the option for the atomatic registration of the
+  fatal error handler.
 - Bugfix: Minimise CSS interference from the hosting cms with
   marked text.
 - Bugfix: Disabling via sourcecode works again.
